# netxduo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSED-HARDWARE.txt  README.md  SECURITY.md  TODO  file_source_notes.txt
addons/: CMakeLists.txt
addons/azure_iot/azure_iot_security_module/: CMakeLists.txt  nx_azure_iot_security_module.c  nx_azure_iot_security_module.h
addons/azure_iot/azure_iot_security_module/configs/: RTOS_BASE.dist  RTOS_BASE_UT.dist  asc_config.h.in
addons/azure_iot/azure_iot_security_module/inc/: asc_port.h  asc_version.h
addons/azure_iot/azure_iot_security_module/inc/configs/L4_BASE/: asc_config.h
addons/azure_iot/azure_iot_security_module/inc/configs/RTOS_BASE/: asc_config.h
addons/azure_iot/azure_iot_security_module/inc/configs/RTOS_BASE_UT/: asc_config.h
addons/azure_iot/azure_iot_security_module/inc/iot_security_module/: mti.h
addons/azure_iot/azure_iot_security_module/inc/iot_security_module/model/objects/: object_network_activity_ext.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/: CMakeLists.txt
addons/azure_iot/azure_iot_security_module/iot-security-module-core/cmake-modules/: asc_security_coreBuild.cmake  asc_security_core_build_rules.cmake
addons/azure_iot/azure_iot_security_module/iot-security-module-core/configs/: asc_config.h.in  base_dist.cmake  functions.cmake  groups_configuration.cmake
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/: asc_result.h  collector.h  collector_collection.h  collector_collection_factory.h  collector_collection_internal.h  collector_enums.h  collectors_headers.h  collectors_info.h  component_info.h  components_factory.h  components_factory_enum.h  components_factory_type.h  configuration.h  core.h  logger.h  object_pool.h  object_pool_def.h  object_pool_dynamic.h  object_pool_static.h  serializer.h  version.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/collectors/: heartbeat.h  network_activity.h  system_information.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/model/: mti.h  security_message.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/model/objects/: network_activity.h  objects.h  system_information.h  transport_protocol.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/model/schema/: event_builder.h  event_json_parser.h  flatbuffers_common_reader.h  message_json_parser.h  payload_builder.h  payload_json_parser.h  payload_json_printer.h  payload_reader.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/serializer/: page_allocator.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/utils/: async.h  event_loop_be.h  iconv.h  ievent_loop.h  ifile.h  irand.h  istream.h  itime.h  iuuid.h  macros.h  notifier.h  os_utils.h  string_utils.h  uuid.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/utils/collection/: bit_vector.h  collection.h  hashset.h  hashtable.h  linked_list.h  list.h  stack.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/: collector_collection.c  collector_collection_factory.c  collector_collection_internal.c  collectors_info.c  components_factory.c  components_manager.c  core.c  logger.c  object_pool_static.c
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/collectors/: collector_heartbeat.c
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/model/: collector.c  security_message.c
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/serializer/: heartbeat.c  network_activity.c  protocol_serialize_enum.h  serializer.c  serializer_private.c  serializer_private.h  system_information.c
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/serializer/extensions/: custom_builder_allocator.c  custom_builder_allocator.h  custom_emitter.c  page_allocator.c  page_allocator.h
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/utils/: event_loop_be.c  iconv.c  notifier.c  string_utils.c  uuid.c
addons/azure_iot/azure_iot_security_module/iot-security-module-core/src/utils/collection/: bit_vector.c  hashtable.c  stack.c
addons/azure_iot/azure_iot_security_module/src/collectors/: collector_network_activity.c  collector_system_information.c
addons/azure_iot/azure_iot_security_module/src/model/objects/: object_network_activity_ext.c
addons/azure_iot/azure_iot_security_module/src/utils/: irand.c  itime.c  iuuid.c  os_utils.c
common/: CMakeLists.txt
crypto_libraries/: CMakeLists.txt
docs/: revision_history.txt
test/cmake/crypto/: CMakeLists.txt  coverage.sh  libs  run.sh
test/cmake/crypto/regression/: CMakeLists.txt  crypto_standalone.cmake
test/cmake/mqtt/: CMakeLists.txt  coverage.sh  run.sh
test/cmake/mqtt/regression/: CMakeLists.txt
test/cmake/mqtt_interoperability/regression/: CMakeLists.txt
test/cmake/netxduo/: CMakeLists.txt  additionals.cmake  coverage.sh  run.sh
test/cmake/netxduo/regression/: CMakeLists.txt
test/cmake/netxduo/samples/: CMakeLists.txt
test/cmake/nx_secure/: CMakeLists.txt  coverage.sh  run.sh
test/cmake/nx_secure/libs/: CMakeLists.txt
test/cmake/nx_secure/regression/: CMakeLists.txt
test/cmake/nx_secure_interoperability/regression/: CMakeLists.txt  network_config.cmake
test/cmake/ptp/: CMakeLists.txt  coverage.sh  regression  run.sh
test/cmake/web/: CMakeLists.txt  coverage.sh  run.sh
test/cmake/web/regression/: CMakeLists.txt
test/regression/interoperability_test/test_frame/test/: CMakeLists.txt  configuration.cmake  demo_background_test_process_group_test.c  demo_semaphore_test.c  demo_shared_buffer_test.c  demo_timeout_test.c  generic_modules.cmake  test_files.cmake  tls_test_frame_settings.cmake
test/regression/interoperability_test/test_frame/test/test_scripts/: sleep.sh  sleep_5_secs_then_echo_hello.sh
(+3752 files in other folders)
